tests/harness/errors/154_internal_import_error.eu
{ import: "testdata/154_lib.eu" }

result: priv-helper(1)
